--- a/system.properties
+++ b/system.properties
@@ -1,6 +1,12 @@
-unit_count=4
+unit_count=10
 unit1=127.0.0.1
 unit2=127.0.0.1
 unit3=127.0.0.1
 unit4=127.0.0.1
+unit5=127.0.0.1
+unit6=127.0.0.1
+unit7=127.0.0.1
+unit8=127.0.0.1
+unit9=127.0.0.1
+unit10=127.0.0.1
 tracker=127.0.0.1
